makes mass changes, adds assets, some formatting

--- a/index.html
+++ b/index.html
@@ -4,30 +4,49 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dylan Daly Landing Page Exercise</title>
+        <link rel="stylesheet" href="normalize.css">        
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main>
             <header>
-                header
-                logo
+                <img src="images/logo/logo.png" alt="Dash Logo" id="dashlogo">
             </header>
 
             <section class="boss">
                 <h1>Want to be your own boss?</h1>
-                <p>Start today  and make up to $30/hr driving your own vehicle with Dash!</p>
+                <h2>Start today and make up to $30/hr driving your own vehicle with Dash!</h2>
             </section>
 
             <section class="scooter">
-                background image
+                <img src="images/bg-image/scooter.svg" alt="picture of moped (sets a mood)" id="scooter">
             </section>
 
             <section class="apply">
-                form
+                Apply Now
+                Enter your info below.
+                First name
+                Last name
+                Phone number
+                Email Address
+                I agree to dash terms
+                DRIVE WITH US
+                Already applied? Check your application status here
             </section>
 
             <footer>
-                footer
+                <p>See how much you can earn with Dash.
+                    how many hours do you want to drive with us this week?
+                    Hours
+                    City
+                    CALCULATE</p>
+  
+                <div class="socialicons">
+                    <img src="images/icons/facebook.svg">
+                    <img src="images/icons/instagram.svg">
+                    <img src="images/icons/twitter.svg">
+                    <img src="images/icons/linkedin.svg">
+                </div>
             </footer>
         </main>
     </body>
