changes img sizes, fonts+sizes & adds ps/h1s

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <section class="boss">
                 <h1>Want to be your own boss?</h1>
-                <h2>Start today and make up to $30/hr driving your own vehicle with Dash!</h2>
+                <p>Start today and make up to $30/hr driving your own vehicle with Dash!</p>
             </section>
 
             <section class="scooter">
@@ -23,23 +23,22 @@
             </section>
 
             <section class="apply">
-                Apply Now
-                Enter your info below.
-                First name
-                Last name
-                Phone number
-                Email Address
-                I agree to dash terms
-                DRIVE WITH US
-                Already applied? Check your application status here
+                <h1>Apply Now</h1>
+                <p>Enter your info below.</p>
+                <p>First name</p>
+                <p>Last name</p>
+                <p>Phone number</p>
+                <p>Email Address</p>
+                <p>I agree to dash terms</p>
+                <h1>DRIVE WITH US</h1>
+                <p>Already applied? Check your application status here</p>
             </section>
 
             <footer>
-                <p>See how much you can earn with Dash.
-                    how many hours do you want to drive with us this week?
-                    Hours
-                    City
-                    CALCULATE</p>
+                <p>See how much you can earn with Dash.</p>
+                <p>how many hours do you want to drive with us this week?</p>
+                <p>HoursCity</p>
+                <h1>CALCULATE</h1>
   
                 <div class="socialicons">
                     <img src="images/icons/facebook.svg">
