--- a/index.html
+++ b/index.html
@@ -25,12 +25,26 @@
             <section class="apply">
                 <h1>Apply Now</h1>
                 <p>Enter your info below.</p>
-                <p>First name</p>
-                <p>Last name</p>
-                <p>Phone number</p>
-                <p>Email Address</p>
-                <p>I agree to dash terms</p>
-                <h1>DRIVE WITH US</h1>
+
+                <form>
+                    <label for="fname"></label>
+                    <input type="text" id="fname" placeholder="First name"><br>
+
+                    <label for="lname"></label>
+                    <input type="text" id="lname" placeholder="Last name"><br>
+
+                    <label for="phone"></label>
+                    <input type="text" id="phone" placeholder="Phone number"><br>
+
+                    <label for="email"></label>
+                    <input type="text" id="email" placeholder="Email Address"><br>
+
+                    <input type="radio" id="agree">
+                    <label for="agree">I agree to dash terms</label><br>
+
+                    <input type="submit" value="DRIVE WITH US">
+                </form>
+                
                 <p>Already applied? Check your application status here</p>
             </section>
 
