finishes the form, and adjusts the scooter picture

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Dylan Daly Landing Page Exercise</title>
         <link rel="stylesheet" href="normalize.css">        
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="images/favicon.ico">
     </head>
     <body>
         <main>
@@ -39,13 +40,15 @@
                     <label for="email"></label>
                     <input type="text" id="email" placeholder="Email Address"><br>
 
-                    <input type="radio" id="agree">
+                    <input type="checkbox" id="agree">
                     <label for="agree">I agree to dash terms</label><br>
 
                     <input type="submit" value="DRIVE WITH US">
                 </form>
                 
-                <p>Already applied? Check your application status here</p>
+                <div class="applied">
+                    <p>Already applied? <a href ="#">Check your application status here</a></p>
+                </div>
             </section>
 
             <footer>
