finishes the mobile view

--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
             </section>
 
             <footer>
-                <p>See how much you can earn with Dash.</p>
+                <h1>See how much you can earn with Dash.</h1>
                 <p>how many hours do you want to drive with us this week?</p>
-                <p>HoursCity</p>
-                <h1>CALCULATE</h1>
+                <form>
+                    <div class="footerform">
+                        <label class="footerformhours" for="hours"></label>
+                        <input type="text" id="hours" placeholder="Hours">
+
+                        <label class="footerformcity" for="city"></label>
+                        <input type="text" id="city" placeholder="City"><br>
+                    </div>
+
+                    <input type="submit" value="CALCULATE">
+                </form>
   
                 <div class="socialicons">
                     <img src="images/icons/facebook.svg">
