implements tablet view and adds relating comments

--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
                 <p>how many hours do you want to drive with us this week?</p>
                 <form>
                     <div class="footerform">
-                        <label class="footerformhours" for="hours"></label>
+                        <label class="hours" for="hours"></label>
                         <input type="text" id="hours" placeholder="Hours">
 
-                        <label class="footerformcity" for="city"></label>
+                        <label class="city" for="city"></label>
                         <input type="text" id="city" placeholder="City"><br>
+
+                        <input type="submit" value="CALCULATE">
                     </div>
 
-                    <input type="submit" value="CALCULATE">
                 </form>
   
                 <div class="socialicons">
