--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 </form>
   
                 <div class="socialicons">
-                    <img src="images/icons/facebook.svg">
-                    <img src="images/icons/instagram.svg">
-                    <img src="images/icons/twitter.svg">
-                    <img src="images/icons/linkedin.svg">
+                    <img src="images/icons/facebook.svg" alt="facebook icon">
+                    <img src="images/icons/instagram.svg" alt="instagram icon">
+                    <img src="images/icons/twitter.svg" alt="twitter icon">
+                    <img src="images/icons/linkedin.svg" alt="linkedin icon">
                 </div>
             </footer>
         </main>
