--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <section class="apply">
                 <h1>Apply Now</h1>
                 <p>Enter your info below.</p>
+                <p class="web-p">Enter your info below to get started.</p>
 
                 <form>
                     <label for="fname"></label>
@@ -64,7 +65,6 @@
 
                         <input type="submit" value="CALCULATE">
                     </div>
-
                 </form>
   
                 <div class="socialicons">
